@author: Jaime Fernández Funcionalidad vista de ejercicios de atleta con correspondientes interfaces gráficas. También se han hecho múltiples pruebas y se ha comenzado con funcionalidad e interfaz gráfica de las rutinas del usuario